spot fleet template
