# server/main.go
@@ -1,11 +1,12 @@
 package main
 
 import (
-	"context"
 	"fmt"
 	"mchost-spot-instance/server/api"
+	awsManager "mchost-spot-instance/server/aws"
 	"mchost-spot-instance/server/config"
-	manager "mchost-spot-instance/server/jwt"
+	controller "mchost-spot-instance/server/controller"
+	jwtManager "mchost-spot-instance/server/jwt"
 
 	// "mchost-spot-instance/server/lib/rabbitmq"
 	"mchost-spot-instance/server/models"
@@ -13,9 +14,6 @@ import (
 	"net"
 
 	"mchost-spot-instance/www/docs"
-
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
 
 	// elasticLog "gopkg.in/sohlich/elogrus.v7"
 
@@ -32,8 +30,7 @@ func main() {
 
 	appConfig := config.InitConfig(".env")
 
-	docs.SwaggerInfo.Title = "Go Auth API"
-	docs.SwaggerInfo.Description = "API documentation for Go Auth Service"
+	docs.SwaggerInfo.Title = "Spot Instance API"
 	docs.SwaggerInfo.Version = "1.0"
 	docs.SwaggerInfo.Host = fmt.Sprintf("localhost:%s", appConfig.AppPort)
 	docs.SwaggerInfo.BasePath = "/api"
@@ -75,39 +72,20 @@ func main() {
 	// go rabbitmq.StartConsumer("orders")
 
 	grpcServer := grpc.NewServer()
-	service := &api.Server{
-		Db:      db,
-		Logger:  esLogger,
-		Manager: manager.NewJWTManager(appConfig.AppKey, 3600, esLogger),
-		Config:  appConfig,
+	server := &api.Server{
+		Db:         db,
+		Logger:     esLogger,
+		JWTManager: jwtManager.NewJWTManager(appConfig.AppKey, 3600, esLogger),
+		AppConfig:  appConfig,
+		AWSManager: awsManager.NewAWSManager(appConfig.AwsAccessKeyId, appConfig.AwsAccessKeySecret),
 	}
 
 	router := gin.Default()
 
-	// Route to serve the Swagger documentation
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	router.GET("/register", func(c *gin.Context) {
-		ctx := context.Background()
-
-		resp, err := service.RegisterSpotInstance(ctx)
-		if err != nil {
-			c.JSON(500, gin.H{"error": err.Error()})
-			return
-		}
-
-		// Return the response
-		c.JSON(200, resp)
-	})
-
-	router.GET("/ping", func(c *gin.Context) {
-		c.JSON(200, gin.H{
-			"message": "pong",
-		})
-	})
+	controller.SetupHandlers(router, server)
 
 	go router.Run(fmt.Sprintf(":%s", appConfig.AppPort))
-	pb.RegisterSpotServiceServer(grpcServer, service)
+	pb.RegisterSpotServiceServer(grpcServer, server)
 
 	if err := grpcServer.Serve(lis); err != nil {
 		esLogger.Fatalf("failed to serve: %v", err)
